syntax = "proto3";

package indexator;

option java_package = "company.evo.kafka.elasticsearch";
option java_outer_classname = "BulkActionProto";

message BulkAction {
    enum OpType {
        INDEX = 0;
        DELETE = 1;
        UPDATE = 2;
        CREATE = 3;
    }
    OpType op_type = 1;
    string index = 2;
    string type = 3;
    string id = 4;
    string routing = 5;
    string parent = 6;
    string version = 7;
    string version_type = 8;
    // Only valid for UPDATE action
    int32 retry_on_conflict = 9;
}
